// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Arrow story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-8"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    id="headlessui-popover-button-6"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-7"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-9"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-8"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
    <div
      aria-hidden="true"
      class="popover-content__arrow"
      data-popper-arrow="true"
    />
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-10"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Bottom story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-23"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-21"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-22"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-24"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-23"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-25"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-48"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-46"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-47"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-49"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-48"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-50"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> BottomStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-43"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-41"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-42"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-44"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-43"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-45"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-3"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-1"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-2"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-4"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-3"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-5"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Left story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-28"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-26"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-27"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-29"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="left"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-28"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-30"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> LeftEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-68"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-66"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-67"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-69"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="left-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-68"
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-70"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> LeftStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-63"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-61"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-62"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-64"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="left-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-63"
    style="position: absolute; left: 0px; top: 0px; right: 0px; transform: translate(-10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-65"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Right story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-18"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-16"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-17"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-19"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="right"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-18"
    style="position: absolute; left: 0px; top: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-20"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> RightEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-58"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-56"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-57"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-59"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="right-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-58"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-60"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> RightStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-53"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-51"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-52"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-54"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="right-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-53"
    style="position: absolute; left: 0px; top: 0px; transform: translate(10px, 0px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-55"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-13"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-11"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-12"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-14"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="top"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-13"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-15"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopEnd story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-38"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-36"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-37"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-39"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="top-end"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-38"
    style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-40"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> TopStart story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-33"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-headlessui-state="open"
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-31"
    type="button"
  >
    Open Popover
  </button>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-32"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-before-34"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    data-testid="popover-content"
    id="headlessui-popover-panel-33"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
    tabindex="-1"
  >
    <div
      class="popover-container"
    >
      <div
        class="fpo m-2 p-6"
      >
        Popover Content goes here
      </div>
    </div>
  </article>
  <button
    aria-hidden="true"
    id="headlessui-focus-sentinel-after-35"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;
